--- a/config/database.yml
+++ b/config/database.yml
@@ -10,29 +10,23 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
-  pool: 8
-  username: root
-  password: 09212006
-  socket: /var/run/mysqld/mysqld.sock
-  host: localhost
+  adapter: postgresql
+  encoding: unicode
+  username: postgres
+  password: postgres
+  host: db
+  pool: 5
 
 development:
   <<: *default
-  adapter: mysql2  
-  encoding: utf8  
-  database: ruby_development
-  username: root
-  password: 09212006  
-  host: localhost
+  database: myapp_developmen
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ruby_test
+  database: myapp_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
