--- a/first_flutter/pubspec.yaml
+++ b/first_flutter/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
